--- a/schedule_help_pro_front_end/public/index.html
+++ b/schedule_help_pro_front_end/public/index.html
@@ -28,7 +28,25 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    fyguidoszxlkcvmbv,cl
     <div id="root"></div>
+    <header>
+      <nav><a href="https://www.ratemyprofessors.com/">
+            <img width="200" height="100" src="https://bloximages.newyork1.vip.townnews.com/laloyolan.com/content/tncms/assets/v3/editorial/2/a2/2a274d71-8277-5bd1-be25-c65cdb710e42/5ac80d20dfc1e.image.jpg?resize=1200%2C600"
+            alt="Rate My Professor Logo">
+          </a>
+      </nav>
+    </header>
+
+    <footer id="footer">
+      <br><br>
+      
+    </footer>
+    <footer id="footer">
+      <p><br>
+      <br>Powered by <br><br><br>
+      <img height="100" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png" alt="React Logo"></p>
+  </footer>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
