--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,29 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Main Page</title>
+    <title>ScheduleHelpPro</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
-      
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app"/>
       <!--
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -44,21 +31,23 @@
     <title>ScheduleHelpPro App</title>
   </head>
   <body >
+
+    <div id="circularcursor"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <header>
        <!--<div id="root"></div> -->
       <div class="topnav">
-        <a href="Homescreen"><b>Schedule Help Pro</a> &#128218</b>
+        <a href="info.html">Schedule Help Pro</a> &#128218
         <a href="Login">Log In</a>
         <a href="Register">Register</a>
-        <a href="#about">About Us</a>
-        <a href="#feed">Feedback</a><br/><br/>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Feedback</a>
+        <!--<a href="info.html">Tester</a><br/><br/>-->
+        <br/><br/>
       </div>
     </header>
     <div id="root"></div>
-    <header>
-    </header>
 
     <!--
       This HTML file is a template.
@@ -70,5 +59,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="index.js"></script>
   </body>
 </html>
