--- a/client/public/contact.html
+++ b/client/public/contact.html
@@ -19,6 +19,34 @@
   <body>
     <div id="circularcursor"></div>
       Contact Us
+
+      <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Join the Community</h3>
+                        <ul>
+                            <li><a href="Register">Sign Up</a></li>
+                        </ul><br/>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>About</h3>
+                        <ul>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul><br/>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>ScheduleHelpPro</h3>
+                        <p id="footah">Because Learning Should Be Easier</p>
+                    </div>
+                    <div class="col item social"><a href="info.html"><i class="icon ion-social-facebook"></i></a></div>
+                    <div class="copyright">ScheduleHelpPro © 2022</div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
      <script src="info.js"></script>
   </body>
 </html>
