--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    
   </head>
   <body>
     <meta name="theme-color" content="#000000" />
@@ -59,6 +60,34 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <div class="footer-dark">
+      <footer>
+          <div class="container">
+              <div class="row">
+                  <div class="col-sm-6 col-md-3 item">
+                      <h3>Join the Community</h3>
+                      <ul>
+                          <li><a href="Register">Sign Up</a></li>
+                      </ul><br/>
+                  </div>
+                  <div class="col-sm-6 col-md-3 item">
+                      <h3>About</h3>
+                      <ul>
+                          <li><a href="contact.html">Contact</a></li>
+                      </ul><br/>
+                  </div>
+                  <div class="col-md-6 item text">
+                      <h3>ScheduleHelpPro</h3>
+                      <p id="footah">Because Learning Should Be Easier</p>
+                  </div>
+                  <div class="col item social"><a href="info.html"><i class="icon ion-social-facebook"></i></a></div>
+                  <div class="copyright">ScheduleHelpPro © 2022</div>
+              </div>
+          </div>
+      </footer>
+  </div>
+    
     <script src="index.js"></script>
   </body>
 </html>
