--- a/client/public/info.html
+++ b/client/public/info.html
@@ -37,14 +37,14 @@
 
         <div class="heading1">
 
-        <h1>
+        <h1 id="head1">
           Everything you need in one place.
         </h1>
         </div>
         <h2>
             What is Schedule Help Pro?
         </h2>
-        <p>
+        <p id="text1">
           Schedule Help Pro is a website that makes the registration process for students easier and more efficent. <br>
           This website provides students with access to various resources such as rate my professor reviews, avaiable <br>
           classes, and available tutors. By using this website, students will not have to open multiple tabs in order <br>
@@ -56,12 +56,12 @@
         <h2>
           How to use Schedule Help Pro
         </h2>
-        <p1>
+        <p id="text2">
           You can access the resources Schedule Help Pro provides by registering through the login page<br>
           on our website. If you already have an account you can click on the login page and enter your <br>
           information. After logging in, you will be redirected to a class list page which will show <br>
           you a class list. You can then click on a class to access the page for it <br>
-        </p1>
+        </p>
     <h2>
         Why use Schedule Help Pro
     </h2>
@@ -95,10 +95,37 @@
         </div>
     </div>
       <br><br>
-    <footer id="footer">
-      <p><br>
-      <br> <br><br><br>
-    </footer>
+    
+      <div class="footer-dark">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Join the Community</h3>
+                        <ul>
+                            <li><a href="Register">Sign Up</a></li>
+                        </ul><br/>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>About</h3>
+                        <ul>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul><br/>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>ScheduleHelpPro</h3>
+                        <p id="footah">Because Learning Should Be Easier</p>
+                    </div>
+                    <div class="col item social"><a href="info.html"><i class="icon ion-social-facebook"></i></a></div>
+                    <div class="copyright">ScheduleHelpPro © 2022</div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
     <script src="info.js"></script>
   </body>
 </html>
