--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,14 +37,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <header>
-       <!--<div id="root"></div> -->
+       
       <div class="topnav">
         <a href="info.html">Schedule Help Pro</a> &#128218
         <a href="Login">Log In</a>
         <a href="Register">Register</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Feedback</a>
-        <!--<a href="info.html">Tester</a><br/><br/>-->
         <br/><br/>
       </div>
     </header>
@@ -61,6 +60,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
+    <!--
     <div class="footer-dark">
       <footer>
           <div class="container">
@@ -86,7 +86,7 @@
               </div>
           </div>
       </footer>
-  </div>
+  </div>-->
     
     <script src="index.js"></script>
   </body>
