--- a/client/public/info.html
+++ b/client/public/info.html
@@ -62,14 +62,14 @@
           information. After logging in, you will be redirected to a class list page which will show <br>
           you a class list. You can then click on a class to access the page for it <br>
         </p>
-    <h2>
+    <h3 id=" boxes">
         Why use Schedule Help Pro
-    </h2>
+    </h3>
     <div class = "container">
         <div class = "box1">
             <img width ="200" height ="200" src=https://static.vecteezy.com/system/resources/thumbnails/003/572/437/small/illustration-of-book-icon-free-free-vector.jpg>
             <h4>
-                Register Efficently
+                Register Efficiently
             </h4>
             <p>
                 Pick your classes for the semester without worrying about opening multiple tabs
@@ -85,7 +85,7 @@
             </p>
         </div>
         <div class = "box3">
-            <img width ="200" height="200" src=https://media.istockphoto.com/vectors/calendar-icon-schedule-icon-isolated-on-white-background-flat-design-vector-id1296456300?k=20&m=1296456300&s=170667a&w=0&h=qVcwf0PwcIGWPt8R9oDe6rhY71jvoI6hmxKbsPC-X3g=>
+            <img width ="200" height="200"  src=https://media.istockphoto.com/vectors/calendar-icon-schedule-icon-isolated-on-white-background-flat-design-vector-id1296456300?k=20&m=1296456300&s=170667a&w=0&h=qVcwf0PwcIGWPt8R9oDe6rhY71jvoI6hmxKbsPC-X3g=>
             <h4>
                 Schedule
             </h4>
